# SpecVLM

./: .gitignore  .vercelignore  README.md  next.config.js  phase1_baseline.py  phase2_internals.py  phase3_speculative.py  phase4_kv_cache.py  phase5_distributed.py  pyproject.toml  requirements.txt  setup.py  tailwind.config.ts  vercel.json
api/: index.py
app/: globals.css  page.tsx
app/playground/: page.tsx
apps/backend/: README.md
apps/web/: package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx  providers.tsx
apps/web/app/architecture/: page.tsx
apps/web/app/benchmark/: page.tsx
apps/web/components/: ImageUpload.tsx
apps/web/lib/: types.ts
components/: ChatMessage.tsx  ChatStream.tsx  PerformancePanel.tsx  Sidebar.tsx
config/: settings.py
distributed/: __init__.py  ray_engine.py
docker/: Dockerfile  Dockerfile.cuda  docker-compose.yml
experiments/: phase1_baseline.py  phase2_internals.py  phase3_speculative.py  phase4_kv_cache.py  phase5_distributed.py
inference/: engine.py
lib/: useSpeculativeStream.ts
models/: target_model.py
monitoring/: profiler.py
scripts/: setup.ps1  verify_imports.py
serving/: __init__.py  scheduler.py  worker.py
specvlm/benchmarks/: __init__.py  latency_benchmark.py  throughput_benchmark.py
specvlm/config/: __init__.py  model_config.yaml  settings.py
specvlm/distributed/: gpu_router.py
specvlm/inference/: __init__.py  engine.py  kv_cache.py  speculative_decoder.py  token_verifier.py  visual_encoder.py
specvlm/models/: __init__.py  base_vlm.py  draft_model.py
specvlm/monitoring/: __init__.py  metrics.py  prometheus.yml
specvlm/monitoring/grafana/dashboards/: specvlm_overview.json
specvlm/serving/: aggregator.py  api.py  engine.py  schemas.py
